--- a/app/src/main/res/layout/activity_item_list.xml
+++ b/app/src/main/res/layout/activity_item_list.xml
@@ -1,19 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.view.ViewPager
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
+
+
+
+
+    <android.support.v4.view.ViewPager
+    android:id="@+id/pager"
+    android:layout_marginTop="30dp"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"/>
+
+
+
+
+
+</LinearLayout>
+
+<!--<android.support.v4.view.ViewPager
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/pager"
+    android:layout_marginTop="30dp"
     android:layout_width="match_parent"
-    android:layout_height="match_parent" />
-<!--<fragment xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/item_list"
-    android:name="com.example.mastermind.praktikumandroid.MainFragment"
-    android:layout_width="match_parent" android:layout_height="match_parent"
-    android:layout_marginLeft="16dp" android:layout_marginRight="16dp"
-    tools:context=".ItemListActivity" tools:layout="@android:layout/list_content" >
+    android:layout_height="match_parent"/>-->
 
 
 
 
-    </fragment> -->
+    <!--<fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools" android:id="@+id/item_list"
+        android:name="com.example.mastermind.praktikumandroid.MainFragment"
+        android:layout_width="match_parent" android:layout_height="match_parent"
+        android:layout_marginLeft="16dp" android:layout_marginRight="16dp"
+        tools:context=".ItemListActivity" tools:layout="@android:layout/list_content" >
+
+        </fragment> -->
+
 
 
