--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,26 +9,52 @@
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbarMain"
+        style="@style/zaglavlje"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="?attr/actionBarSize"
-        app:titleTextColor="@android:color/white"
-        android:background="#999"
-        android:contentInsetStart="0dp"
+
         android:contentInsetEnd="0dp"
         android:contentInsetLeft="0dp"
         android:contentInsetRight="0dp"
-        app:contentInsetStart="0dp"
+        android:contentInsetStart="0dp"
+        android:minHeight="?attr/actionBarSize"
         app:contentInsetEnd="0dp"
         app:contentInsetLeft="0dp"
-        app:contentInsetRight="0dp">
+        app:contentInsetRight="0dp"
+        app:contentInsetStart="0dp">
 
         <TextView
+            android:id="@+id/toolbarOcena"
+            style="@style/zaglavlje"
+            android:layout_width="30dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:text="_._" />
+
+        <TextView
+            android:id="@+id/toolbarTextSpace"
+            style="@style/zaglavlje"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!Hello World!Hello World!Hello World!Hello World!
-                06-29 21:12:45.030 9798-9798/com.example.acer.toolbartest W/EGL_genymotion: eglSurfaceAttrib not implemented"
-            android:textColor="#fff"/>
+            android:layout_marginRight="5dp"
+            android:text="Adam Gicevic 317/13" />
+
+        <Button
+            android:id="@+id/btnRef"
+            style="@style/UIbt1"
+            android:layout_width="70dp"
+            android:layout_height="30dp"
+            android:backgroundTint="@color/color_GlavnaPozadinaSvetlije2"
+            android:gravity="center_vertical|center"
+            android:onClick="azurirajListu"
+            android:pointerIcon="context_menu"
+            android:text="Azuraj"
+            android:textAlignment="center"
+            android:textAllCaps="false"
+            android:textSize="11dp"
+            android:textStyle="bold"
+            android:visibility="visible" />
 
     </android.support.v7.widget.Toolbar>
 
@@ -36,20 +62,158 @@
     <android.support.design.widget.TabLayout
         android:id="@+id/TabLayoutMain"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/toolbarMain">
+        android:layout_height="wrap_content">
 
     </android.support.design.widget.TabLayout>
 
 
+
+    <!-- ss info dodatak START -->
+
+
+    <TextView
+
+        android:id="@+id/tv_SS_Info"
+        android:layout_width="match_parent"
+        android:layout_height="45dp"
+        android:layout_column="0"
+        android:layout_row="2"
+        android:text="Studentski servis. Pregled lista studenta: Predmeti / Ispiti / Finansije." />
+
+
+    <android.support.design.widget.TabLayout
+
+        android:id="@+id/TabLayout_SS_Opcije"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_toEndOf="@+id/filter_11">
+
+    </android.support.design.widget.TabLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+
+        <TableLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <Spinner
+                    android:id="@+id/filter_1"
+                    style="@style/UIsp1"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:soundEffectsEnabled="true"
+                    android:visibility="gone" />
+
+                <Spinner
+                    android:id="@+id/filter_2"
+                    style="@style/UIsp1"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:soundEffectsEnabled="true"
+                    android:visibility="gone" />
+
+
+                <Spinner
+                    android:id="@+id/filter_3"
+                    style="@style/UIsp1"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:soundEffectsEnabled="true"
+                    android:visibility="gone" />
+            </TableRow>
+
+            <TableRow
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+                <Spinner
+                    android:id="@+id/filter_21"
+                    style="@style/UIsp2"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:visibility="gone" />
+
+                <Spinner
+                    android:id="@+id/filter_22"
+                    style="@style/UIsp2"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:visibility="gone" />
+
+                <Spinner
+                    android:id="@+id/filter_23"
+                    style="@style/UIsp2"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:visibility="gone" />
+
+            </TableRow>
+
+
+            <TableRow android:layout_width="wrap_content">
+
+                <Spinner
+                    android:id="@+id/filter_31"
+                    style="@style/UIsp3"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:tag="zaduzenja_filter"
+                    android:visibility="gone" />
+
+                <Spinner
+                    android:id="@+id/filter_32"
+                    style="@style/UIsp3"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:tag="zaduzenja_filter"
+                    android:visibility="gone" />
+
+                <Spinner
+                    android:id="@+id/filter_33"
+                    style="@style/UIsp3"
+                    android:layout_width="100dp"
+                    android:layout_height="match_parent"
+                    android:tag="zaduzenja_filter"
+                    android:visibility="gone" />
+
+            </TableRow>
+        </TableLayout>
+
+        <TableLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <TableRow>
+
+                <Button
+                    android:id="@+id/clear_filters"
+
+                    style="@style/UIbt1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:tag="clear_filters"
+                    android:text="Poništi"
+                    android:textSize="12sp" />
+            </TableRow>
+        </TableLayout>
+
+
+    </LinearLayout>
+
+    <!-- ss info dodatak END -->
     <android.support.v4.view.ViewPager
         android:id="@+id/ViewPagerMain"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/TabLayoutMain">
-
-    </android.support.v4.view.ViewPager>
-
+        android:layout_height="wrap_content"></android.support.v4.view.ViewPager>
 
 
 </LinearLayout>
