--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,19 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!-- Search, should appear as action button -->
-    <item android:id="@+id/action_search"
+    <!-- STAVKE AKCIJA TOOLBAR-a
+    Search, should appear as action button -->
+    <!--<item android:id="@+id/action_search"
         android:icon="@drawable/ic_action_check"
         android:title="@string/action_favs"
-        android:showAsAction="ifRoom"
-        android:onClick="favsDisplay"/>
+        android:showAsAction="ifRoom" /> -->
+        <!--android:onClick="favsDisplay"/> -->
     <!-- Settings, should always be in the overflow -->
-    <item android:id="@+id/action_settings"
+
+    <item
+        android:id="@+id/action_settings"
+        android:enabled="true"
         android:icon="@drawable/ic_action_setora"
         android:showAsAction="never"
-        android:title="@string/action_settings"
-        android:enabled="true"/>
+        android:title="@string/action_settings" />
     <item android:id="@+id/action_about"
         android:title="@string/action_about"
         android:showAsAction="never" />
